Fix a text wrap

--- a/src/resources/postcss/tickets.pcss
+++ b/src/resources/postcss/tickets.pcss
@@ -823,6 +823,7 @@
 		justify-content: flex-end;
 		min-width: var(--spacer-8);
 		width: fit-content;
+		white-space: nowrap;
 	}
 
 	.tribe-tickets__item__total {
